Enhance frontend and API integration
- Introduced a loading bar component to indicate data fetching status in the main application.
- Implemented an error boundary to catch and display errors gracefully in the application.
- Created a regime selector component to fetch and display available regimes from the API.
- Updated the router to handle error pages for better user experience.
- Added Zustand store for managing selected regime state across components.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="/mc-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Monte Carlo Regime Portfolio Simulator</title>
+    <link rel="stylesheet" href="https://use.typekit.net/aoq7xru.css" />
   </head>
   <body>
     <div id="root"></div>
