Update README and CI/CD setup for Quantitative Portfolio Platform
- Revised project description in `README.md` to reflect the transition from a Monte Carlo simulation focus to a comprehensive quantitative finance platform, highlighting new features like portfolio optimization and real-time WebSocket updates.
- Added `SETUP.md` for GitHub Actions configuration, detailing required secrets and pre-deployment setup for automated deployment to Google Cloud.
- Introduced `ci-cd.yml` for CI/CD pipeline, including backend and frontend testing, code quality checks, and automated deployment processes.
- Updated Dockerfile to utilize Poetry for dependency management and ensure proper installation of backend packages.
- Enhanced frontend components for improved user experience and integration with new backend features.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/mc-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Monte Carlo Regime Portfolio Simulator</title>
+    <title>Quantitative Portfolio Platform</title>
     <link rel="stylesheet" href="https://use.typekit.net/aoq7xru.css" />
   </head>
   <body>
